--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<!-- Black Header -->
 	<nav class="navbar navbar-default navbar-pf" role="navigation">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="/">Sivareddy - Kubernetes Lab</a>
+			<a class="navbar-brand" href="/">Harikrishna - Kubernetes Lab</a>
 		</div>
 	</nav>
 
